# asmlai

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  a.out  asmlai  codegen.cc  codegen.h  compile_commands.json  copy_ptr.cc  copy_ptr.h  correct.s  incorrect.s  lai  main.cc  out  out.s  parser.cc  parser.h  run_code.sh  run_tests.sh  test.lai  testa  tmp  tmp.s  token.cc  token.h  types.h  typesystem.cc  typesystem.h
.cache/clangd/index/: ast.h.275DB4499AE4B968.idx  codegen_x64.cpp.07E7C3EA82816B42.idx  codegen_x64.h.31699B08F08F29E0.idx  compiler.cpp.452172B54674CB4C.idx  compiler.h.BFAFCE4E65A39275.idx  lexer.cpp.A5E356E7EB57810A.idx  lexer.h.9E2276781D5BDD74.idx  main.cpp.D702DE4D4FFA986B.idx  parser.cpp.3E3EFBEECC04918B.idx  parser.h.2F8DC02B13FF4487.idx  (+1 more)
examples/: basic.c  fib.c
old/: CMakeLists.txt
old/src/: .gitignore  ast.h  compiler.cc  compiler.h  lexer.cc  lexer.h  parser.cc  token.h
old/tests/: input1.lai
src/: .#compiler.cpp  .#parser.cpp  ast.c  ast.h  code_gen.c  code_gen.h  codegen.cpp  codegen.h  codegen_x64.cc  codegen_x64.cpp  codegen_x64.h  compiler.c  compiler.cc  compiler.cpp  compiler.h  global.h  lexer.c  lexer.cc  lexer.cpp  lexer.h  main.c  main.cc  main.cpp  parser.c  parser.cc  parser.cpp  parser.h  symbol_table.cc  symbol_table.h  tests.cpp  tests.sh  token.h  types.cc  types.h
src/libc/: print_num.c
src2/: ast.c  ast.h  lexer.h  parser.cpp  parser.h
test/: control_flow.c  pointers.c  run_tests.sh  test.h
tests/: arithmetic.c  tests.sh
xddd/: ast.h  code_gen.c  code_gen.h  code_gen.s  compiler.h  main.c
